<resources>
    <string name="app_name" translatable="false">Rick And Morty App</string>
    <string name="text_characters">Personajes</string>
    <string name="text_places">Lugares</string>
    <string name="text_episodes">Episodios</string>
    <string name="text_favs">Mis Favoritos</string>
    <string name="empty_list">No se encontraron resultados</string>
    <string name="text_name">Nombre: %1$s</string>
    <string name="text_status">Estado: %1$s</string>
    <string name="text_species">Especie: %1$s</string>
    <string name="text_species_title">Especie</string>
    <string name="text_gender">Género: %1$s</string>
    <string name="text_origin">Origen: %1$s</string>
    <string name="text_type">Tipo: %1$s</string>
    <string name="button_favs">Guardar en Favoritos</string>
    <string name="text_dimension">Dimensión: %1$s</string>
    <string name="text_air_date">Fecha de emisión: %1$s</string>
    <string name="text_episode">Episodio: %1$s</string>
</resources>